Fix buttom overlapping issue for chrome

--- a/static/style.css
+++ b/static/style.css
@@ -47,6 +47,10 @@ body {
  background: #ffffff;
 }
 
+.suggestion{
+  padding: 30px;
+}
+
 .text {
  width: 85%;
  display: flex;
